<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
<group android:checkableBehavior="single">
    <item
        android:id="@+id/item_trang_chu"
        android:title="@string/home"
        android:icon="@drawable/home"/>
    <item
        android:id="@+id/item_manage_acc"
        android:title="@string/manage_acc"
        android:icon="@drawable/account"/>
    <item
        android:id="@+id/item_change_pw"
        android:title="@string/change_pw"
        android:icon="@drawable/password"/>
    <item
        android:id="@+id/item_history"
        android:title="@string/history"
        android:icon="@drawable/history"/>
    <item
        android:id="@+id/item_cart"
        android:title="@string/cart"
        android:icon="@drawable/cart"/>
    <item
        android:id="@+id/item_favorite"
        android:title="@string/favorite"
        android:icon="@drawable/favorite"/>
    <item
        android:id="@+id/item_admin"
        android:title="Admin"
        android:icon="@drawable/ic_admin"/>
    <item
        android:id="@+id/item_logout"
        android:title="@string/logout"
        android:icon="@drawable/logout"/>
</group>
</menu>