<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dangKy"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/img_DangNhap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:scaleType="fitStart"
        app:srcCompat="@drawable/picdangnhap" />

    <TextView
        android:id="@+id/tv_TieuDe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:fontFamily="cursive"
        android:gravity="center"
        android:text="@string/food_is_life"
        android:textSize="48sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="Username">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtUsernameDN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Sử dụng TextInputLayout cho mật khẩu -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/pass"
        app:endIconMode="password_toggle"> <!-- Sử dụng endIconMode để thêm icon con mắt -->

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_PassDN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_QuenMK"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="right"
        android:text="@string/forget_pass"
        android:textColor="#2196F3"
        android:textSize="16sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_DangNhap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/dang_nhap"
        android:textSize="16sp" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:id="@+id/tv_BanChuaCoTK"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:text="@string/no_acc"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_DangKy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/dang_ky"
                android:textColor="#FF5722"
                android:textSize="16sp"
                android:textStyle="bold" />
        </TableRow>

    </TableLayout>

</LinearLayout>